--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins
 {
 	id 'fabric-loom' version '0.5-SNAPSHOT'
 	id 'maven-publish'
+	id("com.github.johnrengelman.shadow") version "5.2.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -11,12 +12,23 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
+repositories
+{
+    maven
+    {
+		name = 'lukflug'
+		url = 'https://lukflug.github.io/maven'
+	}
+}
+
 dependencies 
 {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	compile('com.lukflug:panelstudio:0.1.7')
+	compile('com.lukflug:panelstudio-mc16:0.1.7')
 }
 
 processResources 
@@ -45,10 +57,25 @@ java
 	withSourcesJar()
 }
 
+shadowJar
+{
+	dependencies
+	{
+		include(dependency('com.lukflug:panelstudio'))
+		include(dependency('com.lukflug:panelstudio-mc16'))
+	}
+	classifier = 'shadow'
+}
+
 jar 
 {
 	from("LICENSE") 
 	{
 		rename { "${it}_${project.archivesBaseName}"}
 	}
+}
+
+remapJar {
+	dependsOn(shadowJar)
+	input.set(shadowJar.archiveFile)
 }
