--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	compile('com.lukflug:panelstudio:0.1.8')
-	compile('com.lukflug:panelstudio-mc16:0.1.8')
+	modCompile('com.lukflug:panelstudio-mc16:0.1.9')
 }
 
 processResources 
