--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ plugins
 	id("com.github.johnrengelman.shadow") version "5.2.0"
 }
 
+configurations.all {
+    // Check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
+
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
@@ -20,7 +25,8 @@ repositories
 	}
     maven {
 		name = 'lukflug'
-		url = 'https://lukflug.github.io/maven'
+		//url = 'https://lukflug.github.io/maven'
+		url = 'http://localhost:8080/maven'
 	}
 }
 
@@ -32,8 +38,9 @@ dependencies
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
   
 	compile "com.github.ZeroMemes:Alpine:1.9"
-	compile('com.lukflug:panelstudio:0.1.7')
-	compile('com.lukflug:panelstudio-mc16:0.1.7')
+	compile group: 'net.jodah', name: 'typetools', version: '0.5.0'
+	compile('com.lukflug:panelstudio:0.2.0-SNAPSHOT') {changing=true}
+	compile('com.lukflug:panelstudio-mc16:0.2.0-SNAPSHOT') {changing=true}
 }
 
 processResources 
@@ -66,9 +73,10 @@ shadowJar
 {
 	dependencies
 	{
-		include('com.lukflug:panelstudio')
-		include('com.lukflug:panelstudio-mc16')
-		include('com.github.ZeroMemes:Alpine')
+		include(dependency('com.lukflug:panelstudio'))
+		include(dependency('com.lukflug:panelstudio-mc16'))
+		include(dependency('com.github.ZeroMemes:Alpine'))
+		include(dependency('net.jodah:typetools'))
 	}
 	classifier = 'shadow'
 }
